[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-cost"
version = "0.1.0"
description = "Per-call cost tracking and attribution by agent, task, and model. Budgets, alerts, cost reports."
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/darshjme/agent-cost"

[tool.setuptools.packages.find]
where = ["src"]
